update appointment
